2007-09-10  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Maciej Stachowiak.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15157
          Image defined in background-position: top center gets unexpectedly truncated
          <rdar://problem/5469095>

        Test: fast/repaint/body-background-image.html

        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::imageChanged): Refined the logic for when the root takes
        over painting the background, to match paintBoxDecorations(). In particular,
        if the root has defined a background, the body should paint its own background.

2007-09-10  David Harrison  <harrison@apple.com>

        Reviewed by Kevin and Tristan.

        Tests added:
        * editing/pasteboard/paste-into-anchor-text.html: Added.
        * editing/pasteboard/paste-table-cells.html: Added.

        Source changes:
        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::positionAvoidingSpecialElementBoundary):
        Nil check enclosingAnchor.
        
        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::removeNodeAndPruneAncestors):
        New. Keeps m_firstNodeInserted and m_lastLeafInserted updated.
        
        (WebCore::ReplaceSelectionCommand::negateStyleRulesThatAffectAppearance):
        Added a comment.
        
        (WebCore::ReplaceSelectionCommand::removeRedundantStyles):
        Let ReplaceSelectionCommand::removeNodeAndPruneAncestors() update the nodes.
         
        (WebCore::ReplaceSelectionCommand::doApply):
        Pass originalVisPosBeforeEndBR to shouldRemoveEndBR()
        
        (WebCore::ReplaceSelectionCommand::shouldRemoveEndBR):
        Don't remove the br if nothing was inserted.
        
        * editing/ReplaceSelectionCommand.h:
        Add VisiblePosition parameter to shouldRemoveEndBR()
        
        * editing/markup.cpp:
        (WebCore::createMarkup):