@@ -1,3 +1,13 @@
+2007-09-11  George Staikos  <staikos@kde.org>
+
+        Reviewed by Anders.
+
+        Work around gcc bug with some old gcc versions.
+
+        * platform/qt/WidgetQt.cpp:
+        (WebCore::Widget::convertToContainingWindow):
+        (WebCore::Widget::convertFromContainingWindow):
+
 2007-09-10  Mitz Pettel  <mitz@webkit.org>
 
         Reviewed by Maciej Stachowiak.
